--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -40,7 +40,7 @@ body {
 * {
   font-family: "Work Sans", sans-serif;
   transition: all 0.2s;
-  -webkit-tap-highlight-color: $primary;
+  -webkit-tap-highlight-color: $primary-highlight;
 }
 
 *::selection {
