--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#f8f5eb" />
     {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  </head>
+    <link rel="stylesheet" href="{{ "/assets/css/base.css?v=" | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}"> </head>
   <body class="showcase">
     <div class="container">
       <div class="cbc-outer">
@@ -20,8 +20,8 @@
       </div>
       <div class="left-sidebar-content">
         <div class="logos">
-          <a href="https://www.ed.ac.uk/informatics/"><img src="assets/img/logo-ed.png" /></a>
-          <a href="https://web.cs.toronto.edu/"><img src="assets/img/logo-ut.png" /></a>
+          <a href="https://www.ed.ac.uk/informatics/"><img src="assets/img/univs/logo-ed.png" /></a>
+          <a href="https://web.cs.toronto.edu/"><img src="assets/img/univs/logo-ut.png" /></a>
         </div>
         <div class="text-group">
           <h1 class="sc-huge-title">Stats Comics</h1>
