adjust-blend-mode

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -6,7 +6,7 @@ layout: page
   <a href="http://benjbach.me/" class="single-p">
     <div class="single-p-left">
       <div
-        class="p-img l"
+        class="p-img l light-photo"
         style="
           background-image: url(https://visualinteractivedata.github.io/people/bach.png);
         "
@@ -31,7 +31,7 @@ layout: page
       <div
         class="p-img l"
         style="
-          background-image: url(https://www.statistics.utoronto.ca/sites/www.statistics.utoronto.ca/files/FannyChevalierProfile_0.png);
+          background-image: url(http://www.cs.toronto.edu/~fanny/images/fanny-portrait.png);
         "
       ></div>
     </div>
@@ -39,7 +39,7 @@ layout: page
       <div
         class="p-img r"
         style="
-          background-image: url(https://www.statistics.utoronto.ca/sites/www.statistics.utoronto.ca/files/FannyChevalierProfile_0.png);
+          background-image: url(http://www.cs.toronto.edu/~fanny/images/fanny-portrait.png);
         "
       ></div>
       <div class="intro">
