--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -22,6 +22,7 @@
         <div class="navigation">
           <a class="single-nav" href="gallery.html">Gallery</a>
           <a class="single-nav" href="workshop.html">Workshop</a>
+          <a class="single-nav" href="guidelines.html">Guidelines</a>
           <a class="single-nav" href="publication.html">Publication</a>
           <a class="single-nav" href="people.html">People</a>
         </div>
