--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -27,10 +27,11 @@
           <h1 class="sc-huge-title">Stats Comics</h1>
           <p>Making papers and other scientific reports easier to read</p>
           <div class="navigation">
-            <a class="single-nav" href="people.html">People</a>
-            <a class="single-nav" href="publication.html">Publication</a>
-            <a class="single-nav" href="workshop.html">Workshop</a>
             <a class="single-nav" href="gallery.html">Gallery</a>
+            <a class="single-nav" href="guidelines.html">Guidelines</a>
+            <a class="single-nav" href="workshop.html">Workshop</a>
+            <a class="single-nav" href="publication.html">Publication</a>
+            <a class="single-nav" href="people.html">People</a>
           </div>
         </div>
       </div>
