edit-and-minor-fixes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,10 @@ a:hover {
   background-color: $primary-highlight;
 }
 
+[none] {
+  display: none !important;
+}
+
 /*
  ================ PEOPLE STYLES
 */
