--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,7 +23,7 @@
           <a class="single-nav" href="gallery.html">Gallery</a>
           <a class="single-nav" href="workshop.html">Workshop</a>
           <a class="single-nav" href="guidelines.html">Guidelines</a>
-          <a class="single-nav" href="publication.html">Publication</a>
+          <a none class="single-nav" href="publication.html">Publication</a>
           <a class="single-nav" href="people.html">People</a>
         </div>
 
