--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -2,8 +2,8 @@
 layout: page
 ---
 
-<div class="people">
-  <a href="http://benjbach.me/" class="single-p">
+<div class="people not-markdown-area">
+  <a unstyled href="http://benjbach.me/" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l light-photo"
@@ -26,7 +26,7 @@ layout: page
       </div>
     </div>
 </a>
-  <a href="http://fannychevalier.net/" class="single-p">
+  <a unstyled href="http://fannychevalier.net/" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
@@ -50,7 +50,7 @@ layout: page
     </div>
 </a>
 
-  <a href="https://www.designinformatics.org/person/zezhong-wang/" class="single-p">
+  <a unstyled href="https://www.designinformatics.org/person/zezhong-wang/" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
@@ -74,7 +74,7 @@ layout: page
     </div>
 </a>
 
-  <a href="http://jritch.github.io/" class="single-p">
+  <a unstyled href="http://jritch.github.io/" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
@@ -98,7 +98,7 @@ layout: page
     </div>
 </a>
 
-  <a href="tzingtao.com" class="single-p">
+  <a unstyled href="tzingtao.com" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
