--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -26,7 +26,31 @@ a:hover {
 
 .markdown-dest {
   a {
-    text-decoration: underline;
+    text-decoration: none;
+    position: relative;
+    &:after {
+      content: "";
+      position: absolute;
+      z-index: -1;
+      top: 80%;
+      left: -0.1em;
+      right: -0.1em;
+      bottom: 0;
+      transition: top 200ms cubic-bezier(0, 0.8, 0.13, 1);
+      background-color: $primary-highlight;
+    }
+    &:hover {
+      opacity: 1;
+    }
+    &:hover:after {
+      top: 0%;
+    }
+  }
+
+  .not-markdown-area {
+    a:after {
+      all: initial;
+    }
   }
 }
 
@@ -37,6 +61,7 @@ a:hover {
 * {
   -webkit-tap-highlight-color: $primary-highlight;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *::selection {
