--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,18 +14,12 @@
       <header>
         <h1 class="sc-head">
           <a href="/">
-            Stats<br />Comics
+            Stats<br />Comics<br/>
           </a>
           <span class="page-title">{{ page.title }}</span>
         </h1>
 
-        <div class="navigation">
-          <a class="single-nav" href="gallery.html">Gallery</a>
-          <a class="single-nav" href="workshop.html">Workshop</a>
-          <a class="single-nav" href="guidelines.html">Guidelines</a>
-          <a none class="single-nav" href="publication.html">Publication</a>
-          <a class="single-nav" href="people.html">People</a>
-        </div>
+        {% include nav.html %}
 
       </header>
       <section class="markdown-dest">
@@ -35,10 +29,10 @@
       </section>
       <footer>
         <div class="logos">
-          <a href="https://www.ed.ac.uk/informatics/"><img src="assets/img/univs/logo-ed-s.png" /></a>
-          <a href="https://web.cs.toronto.edu/"><img src="assets/img/univs/logo-ut-s.png" /></a>
-          <a href="http://stanford.edu/"><img src="assets/img/univs/logo-stanford-s.png" /></a>
-          <a href="http://cic.tju.edu.cn/"><img src="assets/img/univs/logo-tju-s.png" /></a>
+          <a href="https://www.ed.ac.uk/informatics/"><img src="/assets/img/univs/logo-ed-s.png" /></a>
+          <a href="https://web.cs.toronto.edu/"><img src="/assets/img/univs/logo-ut-s.png" /></a>
+          <a href="http://stanford.edu/"><img src="/assets/img/univs/logo-stanford-s.png" /></a>
+          <a href="http://cic.tju.edu.cn/"><img src="/assets/img/univs/logo-tju-s.png" /></a>
         </div>
         <p><small>Copyright &copy; 2020 Stats Comics.</small></p>
       </footer>
