--- a/_layouts/gallery.html
+++ b/_layouts/gallery.html
@@ -2,10 +2,10 @@
 layout: page
 ---
 
-<style>
+<style></style>
 
-</style>
-
-{{ content }}
+<div class="gallery-dest">
+  {{ content }}
+</div>
 
 <h2><a href="/gallery.html">Back to Gallery</a></h2>
