--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -98,7 +98,7 @@ layout: page
     </div>
 </a>
 
-  <a unstyled href="tzingtao.com" class="single-p">
+  <a unstyled href="http://www.tzingtao.com" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
