--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,52 +1,35 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#f8f5eb" />
-    {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/base.css?v=" | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  </head>
-  <body class="page">
-    <div class="wrapper">
-      <header>
-        <h1 class="sc-head">
-          <a href="/">
-            Stats<br />Comics<br/>
-          </a>
-          <span class="page-title">{{ page.title }}</span>
-        </h1>
+---
+layout: base
+---
 
-        {% include nav.html %}
-
-      </header>
-      <section class="markdown-dest">
-
+<body class="page">
+  <div class="wrapper">
+    <header>
+      <h1 class="sc-head">
+        <a href="/"> Stats<br />Comics<br /> </a>
+        <span class="page-title">{{ page.title }}</span>
+      </h1>
+      {% include nav.html %}
+    </header>
+    <section class="markdown-dest">
       {{ content }}
-
-      </section>
-      <footer>
-        <div class="logos">
-          <a href="https://www.ed.ac.uk/informatics/"><img src="/assets/img/univs/logo-ed-s.png" /></a>
-          <a href="https://web.cs.toronto.edu/"><img src="/assets/img/univs/logo-ut-s.png" /></a>
-          <a href="http://stanford.edu/"><img src="/assets/img/univs/logo-stanford-s.png" /></a>
-          <a href="http://cic.tju.edu.cn/"><img src="/assets/img/univs/logo-tju-s.png" /></a>
-        </div>
-        <p><small>Copyright &copy; 2020 Stats Comics.</small></p>
-      </footer>
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
-  </body>
-</html>
+    </section>
+    <footer>
+      <div class="logos">
+        <a href="https://www.ed.ac.uk/informatics/"
+          ><img src="/assets/img/univs/logo-ed-s.png"
+        /></a>
+        <a href="https://web.cs.toronto.edu/"
+          ><img src="/assets/img/univs/logo-ut-s.png"
+        /></a>
+        <a href="http://stanford.edu/"
+          ><img src="/assets/img/univs/logo-stanford-s.png"
+        /></a>
+        <a href="http://cic.tju.edu.cn/"
+          ><img src="/assets/img/univs/logo-tju-s.png"
+        /></a>
+      </div>
+      <p><small>Copyright &copy; 2020 Stats Comics.</small></p>
+    </footer>
+  </div>
+</body>
