--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,20 +15,7 @@ layout: base
       {{ content }}
     </section>
     <footer>
-      <div class="logos">
-        <a href="https://www.ed.ac.uk/informatics/"
-          ><img src="/assets/img/univs/logo-ed-s.png"
-        /></a>
-        <a href="https://web.cs.toronto.edu/"
-          ><img src="/assets/img/univs/logo-ut-s.png"
-        /></a>
-        <a href="http://stanford.edu/"
-          ><img src="/assets/img/univs/logo-stanford-s.png"
-        /></a>
-        <a href="http://cic.tju.edu.cn/"
-          ><img src="/assets/img/univs/logo-tju-s.png"
-        /></a>
-      </div>
+      {% include logo-s.html %}
       <p><small>Copyright &copy; 2020 Stats Comics.</small></p>
     </footer>
   </div>
