--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -109,6 +109,103 @@ body.gallery {
       display: block;
     }
   }
+
+  div.navigation {
+    margin-top: 0;
+    margin-bottom: 15px;
+    display: flex;
+    a {
+      margin-right: 30px;
+    }
+  }
+}
+
+/*
+ ================ GALLERY STYLES
+*/
+
+.single-exhib {
+  max-width: 500px;
+  background: $coal;
+  padding: 40px;
+  color: white;
+  margin-bottom: 30px;
+  transition: all 0.2s;
+  &:hover {
+    background: $primary;
+  }
+}
+
+.exhib-img {
+  margin-bottom: 30px;
+  background: white;
+  padding: 20px;
+  position: relative;
+  img {
+    width: 100%;
+  }
+  div {
+    mix-blend-mode: multiply;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: url("../img/noise.png");
+  }
+}
+
+.exhib-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.exhib-text {
+  flex: 1;
+  h2,
+  p {
+    margin-bottom: 5px;
+    margin-top: 0;
+  }
+}
+
+.exhib-links {
+  width: 200px;
+  display: flex;
+  justify-content: flex-end;
+  a.exhib-button {
+    text-decoration: none;
+  }
+  .exhib-button {
+    display: block;
+    width: 60px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 3px solid white;
+    color: white;
+    margin-left: 15px;
+    &:hover {
+      opacity: 1;
+      background: white;
+      color: $primary;
+    }
+    h1 {
+      margin: 0;
+    }
+    i {
+      margin-bottom: 7px;
+    }
+    small {
+      color: inherit;
+      font-size: 10px;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+  }
 }
 
 /*
@@ -186,92 +283,6 @@ body.gallery {
 @media print, screen and (max-width: 640px) {
   .single-p {
     flex-direction: column;
-  }
-}
-
-/*
- ================ GALLERY STYLES
-*/
-
-.single-exhib {
-  max-width: 500px;
-  background: $coal;
-  padding: 40px;
-  color: white;
-  margin-bottom: 30px;
-  transition: all 0.2s;
-  &:hover {
-    background: $primary;
-  }
-}
-
-.exhib-img {
-  margin-bottom: 30px;
-  background: white;
-  padding: 20px;
-  position: relative;
-  img {
-    width: 100%;
-  }
-  div {
-    mix-blend-mode: multiply;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-image: url("../img/noise.png");
-  }
-}
-
-.exhib-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.exhib-text {
-  flex: 1;
-  h2,
-  p {
-    margin-bottom: 5px;
-    margin-top: 0;
-  }
-}
-
-.exhib-links {
-  width: 200px;
-  display: flex;
-  justify-content: flex-end;
-  a.exhib-button {
-    text-decoration: none;
-  }
-  .exhib-button {
-    display: block;
-    width: 50px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 3px solid white;
-    color: white;
-    margin-left: 15px;
-    &:hover {
-      opacity: 1;
-      background: white;
-      color: $primary;
-    }
-    h1 {
-      margin: 0;
-    }
-    i {
-      margin-bottom: 7px;
-    }
-    small {
-      color: inherit;
-      font-size: 10px;
-    }
   }
 }
 
