--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -22,7 +22,7 @@ layout: base
         /></a>
       </div>
       <div class="text-group">
-        <h1 class="sc-huge-title">Stats Comics</h1>
+        <h1 class="sc-huge-title">Data Comics for Reporting Studies</h1>
         <p>Making papers and other scientific reports easier to read</p>
         {% include nav.html %}
       </div>
