--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -22,8 +22,8 @@ layout: base
         /></a>
       </div>
       <div class="text-group">
-        <h1 class="sc-huge-title">Data Comics for Reporting Studies</h1>
-        <p>Making papers and other scientific reports easier to read</p>
+        <h1 class="sc-huge-title">Data Comics for Reporting Controlled User Studies <br>in Human-Computer Interaction</h1>
+        <p>Zezhong Wang, Jacob Ritchie, Jingtao Zhou, Fanny Chevalier, Benjamin Bach</p>
         {% include nav.html %}
       </div>
     </div>
