--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -14,7 +14,7 @@ layout: base
     </div>
     <div class="left-sidebar-content">
       <div class="logos">
-        <a href="https://www.ed.ac.uk/informatics/"
+        <a href="https://www.ed.ac.uk/"
           ><img src="assets/img/univs/logo-ed.png"
         /></a>
         <a href="https://web.cs.toronto.edu/"
