--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -17,6 +17,12 @@ layout: base
         <a href="https://www.ed.ac.uk/"
           ><img src="assets/img/univs/logo-ed.png"
         /></a>
+        <a href="http://www.tju.edu.cn/english/index.htm"
+          ><img src="assets/img/univs/logoTianjin.png"
+        /></a>
+          <a href="https://www.stanford.edu/"
+          ><img src="assets/img/univs/logoStanford.png"
+        /></a>
         <a href="https://web.cs.toronto.edu/"
           ><img src="assets/img/univs/logo-ut.png"
         /></a>
