--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ layout: base
     </section>
     <footer>
       {% include logo-s.html %}
-      <p><small>Copyright &copy; 2020 Stats Comics.</small></p>
+      <p><small>Copyright &copy; 2020 Data Comics.</small></p>
     </footer>
   </div>
 </body>
