--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: base
   <div class="wrapper">
     <header>
       <h1 class="sc-head">
-        <a href="/"> Stats<br />Comics<br /> </a>
+        <a href="/"> Data<br />Comics<br /> </a>
         <span class="page-title">{{ page.title }}</span>
       </h1>
       {% include nav.html %}
