--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,6 @@
   <a class="single-nav" href="/gallery.html">Gallery</a>
 <!--   <a class="single-nav" href="/workshop.html">Workshop</a> -->
   <a class="single-nav" href="/guidelines.html">Guidelines</a>
-  <a class="single-nav" href="/publication.html">Publication</a>
+  <a class="single-nav" href="/publication.html">Publications</a>
   <a class="single-nav" href="/people.html">People</a>
 </div>
