Restrict title width

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -302,6 +302,7 @@ body.showcase {
     letter-spacing: -3px;
     line-height: 0.8;
     margin-bottom: 18px;
+    max-width: 1100px;
   }
   .container {
     display: flex;
