Link update and other minor fixes

--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -3,7 +3,7 @@ layout: page
 ---
 
 <div class="people not-markdown-area">
-  <a unstyled href="http://benjbach.me/" class="single-p">
+  <a unstyled href="https://vishub.net/bach" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l light-photo"
