--- a/_layouts/showcase.html
+++ b/_layouts/showcase.html
@@ -6,30 +6,20 @@ layout: base
   <div class="container">
     <div class="cbc-outer">
       <div class="cbc-inner" data-depth="0.2">
-        <div
-          class="comic-banner"
-          style="background-image: url(assets/img/comic-banner.png);"
-        ></div>
+        <div class="comic-banner" style="background-image: url(assets/img/comic-banner.png);"></div>
       </div>
     </div>
     <div class="left-sidebar-content">
       <div class="logos">
-        <a href="https://www.ed.ac.uk/"
-          ><img src="assets/img/univs/logo-ed.png" style="transform: scale(0.95);"
-        /></a>
-        <a href="https://www.stanford.edu/"
-          ><img src="assets/img/univs/logo-stanford.png" style="opacity: 0.8;"
-        /></a>
-        <a href="http://www.tju.edu.cn/english/index.htm" style="opacity: 0.8;"
-          ><img src="assets/img/univs/logo-tju.png"
-        /></a>
-        <a href="https://web.cs.toronto.edu/"
-          ><img src="assets/img/univs/logo-ut.png"
-        /></a>
+        <a href="https://www.ed.ac.uk/"><img src="assets/img/univs/logo-ed.png" style="transform: scale(0.95);" /></a>
+        <a href="https://www.stanford.edu/"><img src="assets/img/univs/logo-stanford.png" style="opacity: 0.8;" /></a>
+        <a href="http://www.tju.edu.cn/english/index.htm">
+          <img src="assets/img/univs/logo-tju.png" style="opacity: 0.8;" />
+        </a>
+        <a href="https://web.cs.toronto.edu/"><img src="assets/img/univs/logo-ut.png" /></a>
       </div>
       <div class="text-group">
         <h1 class="sc-huge-title">Data Comics for Reporting Controlled User Studies in Human-Computer Interaction</h1>
-        <p></p>
         {% include nav.html %}
       </div>
     </div>
