--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -50,7 +50,7 @@ layout: page
     </div>
 </a>
 
-  <a unstyled href="https://www.designinformatics.org/person/zezhong-wang/" class="single-p">
+  <a unstyled href="https://zezhongwang.com/" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
