--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -98,7 +98,7 @@ layout: page
     </div>
 </a>
 
-  <a unstyled href="http://www.tzingtao.com" class="single-p">
+  <a unstyled href="http://www.jingtao.me" class="single-p">
     <div class="single-p-left">
       <div
         class="p-img l"
@@ -115,7 +115,7 @@ layout: page
         "
       ></div>
       <div class="intro">
-        <h1>Tzingtao Chow</h1>
+        <h1>Jingtao Zhou</h1>
         <small>Undergraduate Student</small>
         <small>Tianjin University</small>
       </div>
