--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -103,7 +103,7 @@ layout: page
       <div
         class="p-img l"
         style="
-          background-image: url(https://visualinteractivedata.github.io/people/jingtao.png);
+          background-image: url(https://www.jingtao.me/images/me-bnw.jpg);
         "
       ></div>
     </div>
@@ -111,7 +111,7 @@ layout: page
       <div
         class="p-img r"
         style="
-          background-image: url(https://visualinteractivedata.github.io/people/jingtao.png);
+          background-image: url(https://www.jingtao.me/images/me-bnw.jpg);
         "
       ></div>
       <div class="intro">
