--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -21,7 +21,7 @@ layout: page
       ></div>
       <div class="intro">
         <h1>Benjamin Bach</h1>
-        <small>Assistant Professor</small>
+        <small>Reader (Associate Professor)</small>
         <small>The University of Edinburgh</small>
       </div>
     </div>
