--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -55,7 +55,7 @@ layout: page
       <div
         class="p-img l"
         style="
-          background-image: url(https://visualinteractivedata.github.io/people/wang.jpg);
+          background-image: url(https://zezhongwang.com/assets/img/IMG_7682.png);
         "
       ></div>
     </div>
@@ -63,7 +63,7 @@ layout: page
       <div
         class="p-img r"
         style="
-          background-image: url(https://visualinteractivedata.github.io/people/wang.jpg);
+          background-image: url(https://zezhongwang.com/assets/img/IMG_7682.png);
         "
       ></div>
       <div class="intro">
