--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -68,8 +68,8 @@ layout: page
       ></div>
       <div class="intro">
         <h1>Zezhong Wang</h1>
-        <small>PhD Student</small>
-        <small>The University of Edinburgh</small>
+        <small>Post-Doctoral Fellow at Simon Fraser University</small>
+        <small>PhD from The University of Edinburgh</small>
       </div>
     </div>
 </a>
